PEC3 Script. Fix para las coordenadas del monumento. Algunos comentarios del código cambiados

--- a/script/scriptImportacionTFGrdflib.ipynb
+++ b/script/scriptImportacionTFGrdflib.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgTubZPzGUBu",
-        "outputId": "f928e254-153e-47b2-fb16-e16e078b6d97"
+        "outputId": "ebeac38c-835b-4536-acfe-455240cb3f5d"
       },
       "outputs": [
         {
@@ -35,7 +35,7 @@
             "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
             "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n",
             "Downloading rdflib-7.1.1-py3-none-any.whl (562 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m553.0/562.4 kB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
             "Installing collected packages: isodate, rdflib\n",
             "Successfully installed isodate-0.7.2 rdflib-7.1.1\n"
@@ -63,10 +63,11 @@
         "g = Graph()\n",
         "g.parse(path_ttl, format='turtle')\n",
         "\n",
-        "print(f\"Tripletas cargadas: {len(g)}\")\n",
+        "print(f\"Tripletas iniciales: {len(g)}\")\n",
         "\n",
         "# Espacio de nombres\n",
         "NS = Namespace(\"http://www.semanticweb.org/vic/ontologies/2024/10/monuments/\")\n",
+        "GEO = Namespace(\"http://www.opengis.net/ont/geosparql#\")\n",
         "\n",
         "# Mapeo de subtipos de monumentos\n",
         "subtype_mapping = {\n",
@@ -171,12 +172,11 @@
         "            g.add((monument_uri, NS.hasAuthor, author_uri))\n",
         "\n",
         "        # Carga de geometría y su relación con el monumento\n",
-        "        geometry_uri = URIRef(NS[f\"Geometry_{row['PK']}\"])\n",
-        "        g.add((geometry_uri, RDF.type, NS.Geometry))\n",
-        "        g.add((geometry_uri, NS.geo_asWKT, Literal(f\"POINT({row['LONGITUD']} {row['LATITUD']})\", datatype=XSD.string)))\n",
-        "        g.add((monument_uri, NS.hasGeometry, geometry_uri))\n",
-        "\n",
-        "    print(f\"Direcciones: {addresses}\")\n",
+        "        if row['LONGITUD'] and row['LATITUD']:\n",
+        "          geometry_uri = URIRef(NS[f\"Geometry_{row['PK']}\"])\n",
+        "          g.add((geometry_uri, RDF.type, NS.Geometry))\n",
+        "          g.add((geometry_uri, GEO.asWKT, Literal(f\"POINT({row['LONGITUD']} {row['LATITUD']})\", datatype=GEO.wktLiteral)))\n",
+        "          g.add((monument_uri, NS.hasGeometry, geometry_uri))\n",
         "\n",
         "# Crea ciudad y división administrativa\n",
         "city_uri = URIRef(NS[\"City_Madrid\"])\n",
@@ -188,15 +188,17 @@
         "g.add((admin_div_uri, NS.hasCity, city_uri))\n",
         "g.add((city_uri, NS.isCityOf, admin_div_uri))\n",
         "\n",
-        "# Ejecutar las funciones\n",
+        "# Carga distritos\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
         "    reader = csv.DictReader(csvfile, delimiter=';')\n",
         "    load_districts(reader)\n",
         "\n",
+        "#Carga vecindarios\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
         "    reader = csv.DictReader(csvfile, delimiter=';')\n",
         "    load_neighborhoods(reader)\n",
         "\n",
+        "#Carga monumentos, su geometría y sus relaciones con distritos y vecindarios\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
         "    reader = csv.DictReader(csvfile, delimiter=';')\n",
         "    load_monuments(reader)\n",
@@ -210,28 +212,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXc4pWr8GufC",
-        "outputId": "d3c301f1-5518-4eaa-9557-c2f2fa959a5f"
+        "outputId": "62bf46d6-d7f0-4f8c-bb95-874d14533f31"
       },
-      "execution_count": 20,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tripletas cargadas: 177\n",
-            "Direcciones: 0\n",
-            "Tripletas después de la importación: 31647\n"
+            "Tripletas iniciales: 186\n",
+            "Tripletas después de la importación: 31482\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Graph identifier=Na688d71d170042348766e3748b3f7f19 (<class 'rdflib.graph.Graph'>)>"
+              "<Graph identifier=N257f9c61c7a64d3f9a0f7be668abb613 (<class 'rdflib.graph.Graph'>)>"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 2
         }
       ]
     }
