PEC3 Script de importación: Cambios en tabulación

--- a/script/scriptImportacionTFGrdflib.ipynb
+++ b/script/scriptImportacionTFGrdflib.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgTubZPzGUBu",
-        "outputId": "ebeac38c-835b-4536-acfe-455240cb3f5d"
+        "outputId": "b00e7493-a79a-439f-ca53-953c7b52eb45"
       },
       "outputs": [
         {
@@ -35,7 +35,7 @@
             "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
             "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n",
             "Downloading rdflib-7.1.1-py3-none-any.whl (562 kB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m \u001b[32m553.0/562.4 kB\u001b[0m \u001b[31m17.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m266.2/562.4 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
             "Installing collected packages: isodate, rdflib\n",
             "Successfully installed isodate-0.7.2 rdflib-7.1.1\n"
@@ -71,112 +71,112 @@
         "\n",
         "# Mapeo de subtipos de monumentos\n",
         "subtype_mapping = {\n",
-        "    \"Escultura conceptual o abstracta\": NS.AbstractSculpture,\n",
-        "    \"Grupo Escultórico\": NS.SculpturalGroup,\n",
-        "    \"Elemento conmemorativo, Lápida\": NS.MemorialElement,\n",
-        "    \"Estatua\": NS.Statue,\n",
-        "    \"Puente, construcción civil\": NS.CivilConstruction,\n",
-        "    \"Fuente, Estanque, Lámina de agua\": NS.Fountain,\n",
-        "    \"Elemento de ornamentación\": NS.Ornamentation,\n",
-        "    \"Edificación singular\": NS.UniqueBuilding,\n",
-        "    \"Puerta, Arco triunfal\": NS.Gate\n",
+        "  \"Escultura conceptual o abstracta\": NS.AbstractSculpture,\n",
+        "  \"Grupo Escultórico\": NS.SculpturalGroup,\n",
+        "  \"Elemento conmemorativo, Lápida\": NS.MemorialElement,\n",
+        "  \"Estatua\": NS.Statue,\n",
+        "  \"Puente, construcción civil\": NS.CivilConstruction,\n",
+        "  \"Fuente, Estanque, Lámina de agua\": NS.Fountain,\n",
+        "  \"Elemento de ornamentación\": NS.Ornamentation,\n",
+        "  \"Edificación singular\": NS.UniqueBuilding,\n",
+        "  \"Puerta, Arco triunfal\": NS.Gate\n",
         "}\n",
         "\n",
         "# Carga de distritos\n",
         "def load_districts(csv_reader):\n",
-        "    districts = set()\n",
-        "    for row in csv_reader:\n",
-        "        district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
-        "        if district_name and district_name not in districts:\n",
-        "            district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
-        "            g.add((district_uri, RDF.type, NS.District))\n",
-        "            g.add((district_uri, NS.name, Literal(district_name, datatype=XSD.string)))\n",
-        "            g.add((city_uri, NS.hasDistrict, district_uri))\n",
-        "            g.add((district_uri, NS.isDistrictOf, city_uri))\n",
-        "            districts.add(district_name)\n",
+        "  districts = set()\n",
+        "  for row in csv_reader:\n",
+        "    district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
+        "    if district_name and district_name not in districts:\n",
+        "      district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
+        "      g.add((district_uri, RDF.type, NS.District))\n",
+        "      g.add((district_uri, NS.name, Literal(district_name, datatype=XSD.string)))\n",
+        "      g.add((city_uri, NS.hasDistrict, district_uri))\n",
+        "      g.add((district_uri, NS.isDistrictOf, city_uri))\n",
+        "      districts.add(district_name)\n",
         "\n",
         "# Carga de barrios\n",
         "def load_neighborhoods(csv_reader):\n",
-        "    neighborhoods = set()\n",
-        "    for row in csv_reader:\n",
-        "        district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
-        "        neighborhood_name = row['BARRIO'].strip() if row['BARRIO'] else None\n",
+        "  neighborhoods = set()\n",
+        "  for row in csv_reader:\n",
+        "    district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
+        "    neighborhood_name = row['BARRIO'].strip() if row['BARRIO'] else None\n",
         "\n",
-        "        if neighborhood_name and district_name:\n",
-        "            district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
-        "            neighborhood_normalized = neighborhood_name.replace(' ', '_')\n",
-        "            if neighborhood_name not in neighborhoods:\n",
-        "                neighborhood_uri = URIRef(NS[f\"Neighborhood_{neighborhood_normalized}\"])\n",
-        "                g.add((neighborhood_uri, RDF.type, NS.Neighborhood))\n",
-        "                g.add((neighborhood_uri, NS.name, Literal(neighborhood_name, datatype=XSD.string)))\n",
-        "                g.add((district_uri, NS.hasNeighborhood, neighborhood_uri))\n",
-        "                g.add((neighborhood_uri, NS.isNeighborhoodOf, district_uri))\n",
-        "                neighborhoods.add(neighborhood_name)\n",
+        "    if neighborhood_name and district_name:\n",
+        "      district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
+        "      neighborhood_normalized = neighborhood_name.replace(' ', '_')\n",
+        "      if neighborhood_name not in neighborhoods:\n",
+        "        neighborhood_uri = URIRef(NS[f\"Neighborhood_{neighborhood_normalized}\"])\n",
+        "        g.add((neighborhood_uri, RDF.type, NS.Neighborhood))\n",
+        "        g.add((neighborhood_uri, NS.name, Literal(neighborhood_name, datatype=XSD.string)))\n",
+        "        g.add((district_uri, NS.hasNeighborhood, neighborhood_uri))\n",
+        "        g.add((neighborhood_uri, NS.isNeighborhoodOf, district_uri))\n",
+        "        neighborhoods.add(neighborhood_name)\n",
         "\n",
         "# Carga de monumentos\n",
         "def load_monuments(csv_reader):\n",
-        "    authors_set = set()\n",
-        "    for row in csv_reader:\n",
-        "        # Determina clase de monumento\n",
-        "        monument_class = subtype_mapping.get(row['SUBTIPO'], NS.Monument)\n",
-        "        monument_uri = URIRef(NS[f\"{monument_class.split('/')[-1]}_{row['PK']}\"])\n",
-        "        g.add((monument_uri, RDF.type, monument_class))\n",
+        "  authors_set = set()\n",
+        "  for row in csv_reader:\n",
+        "    # Determina clase de monumento\n",
+        "    monument_class = subtype_mapping.get(row['SUBTIPO'], NS.Monument)\n",
+        "    monument_uri = URIRef(NS[f\"{monument_class.split('/')[-1]}_{row['PK']}\"])\n",
+        "    g.add((monument_uri, RDF.type, monument_class))\n",
         "\n",
-        "        # Añade propiedades\n",
-        "        g.add((monument_uri, NS.PK, Literal(row['PK'], datatype=XSD.string)))\n",
-        "        g.add((monument_uri, NS.name, Literal(row['NOMBRE'], datatype=XSD.string)))\n",
-        "        g.add((monument_uri, NS.description, Literal(row['DESCRIPCION'], datatype=XSD.string)))\n",
-        "        g.add((monument_uri, NS.date, Literal(row['FECHA'], datatype=XSD.string)))\n",
-        "        if row['CODIGO-POSTAL']:\n",
-        "          g.add((monument_uri, NS.postalCode, Literal(row['CODIGO-POSTAL'], datatype=XSD.string)))\n",
+        "    # Añade propiedades\n",
+        "    g.add((monument_uri, NS.PK, Literal(row['PK'], datatype=XSD.string)))\n",
+        "    g.add((monument_uri, NS.name, Literal(row['NOMBRE'], datatype=XSD.string)))\n",
+        "    g.add((monument_uri, NS.description, Literal(row['DESCRIPCION'], datatype=XSD.string)))\n",
+        "    g.add((monument_uri, NS.date, Literal(row['FECHA'], datatype=XSD.string)))\n",
+        "    if row['CODIGO-POSTAL']:\n",
+        "      g.add((monument_uri, NS.postalCode, Literal(row['CODIGO-POSTAL'], datatype=XSD.string)))\n",
         "\n",
-        "        address_parts = [\n",
-        "            row['CLASE-VIAL'].strip() if row['CLASE-VIAL'] else \"\",\n",
-        "            row['NOMBRE-VIA'].strip() if row['NOMBRE-VIA'] else \"\",\n",
-        "            row['NUM'].strip() if row['NUM'] else \"\"\n",
-        "        ]\n",
-        "        address = \" \".join(part for part in address_parts if part).strip()\n",
-        "        if address != \"\":\n",
-        "            g.add((monument_uri, NS.address, Literal(address, datatype=XSD.string)))\n",
+        "    address_parts = [\n",
+        "      row['CLASE-VIAL'].strip() if row['CLASE-VIAL'] else \"\",\n",
+        "      row['NOMBRE-VIA'].strip() if row['NOMBRE-VIA'] else \"\",\n",
+        "      row['NUM'].strip() if row['NUM'] else \"\"\n",
+        "    ]\n",
+        "    address = \" \".join(part for part in address_parts if part).strip()\n",
+        "    if address != \"\":\n",
+        "      g.add((monument_uri, NS.address, Literal(address, datatype=XSD.string)))\n",
         "\n",
-        "        # Relación con la ciudad\n",
-        "        g.add((monument_uri, NS.isLocatedInCity, city_uri))\n",
-        "        g.add((city_uri, NS.cityHasMonument, monument_uri))\n",
+        "    # Relación con la ciudad\n",
+        "    g.add((monument_uri, NS.isLocatedInCity, city_uri))\n",
+        "    g.add((city_uri, NS.cityHasMonument, monument_uri))\n",
         "\n",
-        "        # Relación con barrios y distritos\n",
-        "        district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
-        "        neighborhood_name = row['BARRIO'].strip() if row['BARRIO'] else None\n",
+        "    # Relación con barrios y distritos\n",
+        "    district_name = row['DISTRITO'].strip() if row['DISTRITO'] else None\n",
+        "    neighborhood_name = row['BARRIO'].strip() if row['BARRIO'] else None\n",
         "\n",
-        "        if district_name:\n",
-        "            district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
-        "            g.add((monument_uri, NS.isLocatedInDistrict, district_uri))\n",
-        "            g.add((district_uri, NS.districtHasMonument, monument_uri))\n",
+        "    if district_name:\n",
+        "      district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
+        "      g.add((monument_uri, NS.isLocatedInDistrict, district_uri))\n",
+        "      g.add((district_uri, NS.districtHasMonument, monument_uri))\n",
         "\n",
-        "        if neighborhood_name:\n",
-        "            neighborhood_uri = URIRef(NS[f\"Neighborhood_{neighborhood_name.replace(' ', '_')}\"])\n",
-        "            g.add((monument_uri, NS.isLocatedInNeighborhood, neighborhood_uri))\n",
-        "            g.add((neighborhood_uri, NS.neighborhoodHasMonument, monument_uri))\n",
+        "    if neighborhood_name:\n",
+        "      neighborhood_uri = URIRef(NS[f\"Neighborhood_{neighborhood_name.replace(' ', '_')}\"])\n",
+        "      g.add((monument_uri, NS.isLocatedInNeighborhood, neighborhood_uri))\n",
+        "      g.add((neighborhood_uri, NS.neighborhoodHasMonument, monument_uri))\n",
         "\n",
-        "        # Carga de autores y su relación con el monumento\n",
-        "        if row['AUTORES']:\n",
-        "          authors = row['AUTORES'].split(\" - \")\n",
-        "          for author in authors:\n",
-        "            author_clean = author.strip().replace(' ', '_')\n",
-        "            if author_clean not in authors_set:\n",
-        "              author_uri = URIRef(NS[f\"Author_{author_clean}\"])\n",
-        "              g.add((author_uri, RDF.type, NS.Author))\n",
-        "              g.add((author_uri, NS.name, Literal(author.strip(), datatype=XSD.string)))\n",
-        "              authors_set.add(author_clean)\n",
+        "    # Carga de autores y su relación con el monumento\n",
+        "    if row['AUTORES']:\n",
+        "      authors = row['AUTORES'].split(\" - \")\n",
+        "      for author in authors:\n",
+        "        author_clean = author.strip().replace(' ', '_')\n",
+        "        if author_clean not in authors_set:\n",
+        "          author_uri = URIRef(NS[f\"Author_{author_clean}\"])\n",
+        "          g.add((author_uri, RDF.type, NS.Author))\n",
+        "          g.add((author_uri, NS.name, Literal(author.strip(), datatype=XSD.string)))\n",
+        "          authors_set.add(author_clean)\n",
         "\n",
-        "            g.add((author_uri, NS.isAuthorOf, monument_uri))\n",
-        "            g.add((monument_uri, NS.hasAuthor, author_uri))\n",
+        "        g.add((author_uri, NS.isAuthorOf, monument_uri))\n",
+        "        g.add((monument_uri, NS.hasAuthor, author_uri))\n",
         "\n",
-        "        # Carga de geometría y su relación con el monumento\n",
-        "        if row['LONGITUD'] and row['LATITUD']:\n",
-        "          geometry_uri = URIRef(NS[f\"Geometry_{row['PK']}\"])\n",
-        "          g.add((geometry_uri, RDF.type, NS.Geometry))\n",
-        "          g.add((geometry_uri, GEO.asWKT, Literal(f\"POINT({row['LONGITUD']} {row['LATITUD']})\", datatype=GEO.wktLiteral)))\n",
-        "          g.add((monument_uri, NS.hasGeometry, geometry_uri))\n",
+        "    # Carga de geometría y su relación con el monumento\n",
+        "    if row['LONGITUD'] and row['LATITUD']:\n",
+        "      geometry_uri = URIRef(NS[f\"Geometry_{row['PK']}\"])\n",
+        "      g.add((geometry_uri, RDF.type, NS.Geometry))\n",
+        "      g.add((geometry_uri, GEO.asWKT, Literal(f\"POINT({row['LONGITUD']} {row['LATITUD']})\", datatype=GEO.wktLiteral)))\n",
+        "      g.add((monument_uri, NS.hasGeometry, geometry_uri))\n",
         "\n",
         "# Crea ciudad y división administrativa\n",
         "city_uri = URIRef(NS[\"City_Madrid\"])\n",
@@ -190,18 +190,18 @@
         "\n",
         "# Carga distritos\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "    reader = csv.DictReader(csvfile, delimiter=';')\n",
-        "    load_districts(reader)\n",
+        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
+        "  load_districts(reader)\n",
         "\n",
         "#Carga vecindarios\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "    reader = csv.DictReader(csvfile, delimiter=';')\n",
-        "    load_neighborhoods(reader)\n",
+        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
+        "  load_neighborhoods(reader)\n",
         "\n",
         "#Carga monumentos, su geometría y sus relaciones con distritos y vecindarios\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "    reader = csv.DictReader(csvfile, delimiter=';')\n",
-        "    load_monuments(reader)\n",
+        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
+        "  load_monuments(reader)\n",
         "\n",
         "# Guardar el resultado\n",
         "print(f\"Tripletas después de la importación: {len(g)}\")\n",
@@ -212,27 +212,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXc4pWr8GufC",
-        "outputId": "62bf46d6-d7f0-4f8c-bb95-874d14533f31"
+        "outputId": "0c656114-56e9-40c9-ddb0-11ea963c0475"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tripletas iniciales: 186\n",
-            "Tripletas después de la importación: 31482\n"
+            "Tripletas iniciales: 187\n",
+            "Tripletas después de la importación: 31483\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Graph identifier=N257f9c61c7a64d3f9a0f7be668abb613 (<class 'rdflib.graph.Graph'>)>"
+              "<Graph identifier=Nc05f5253f1614c06972d6b9ba242b613 (<class 'rdflib.graph.Graph'>)>"
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 7
         }
       ]
     }
