PEC3. Ontología: Propiedad infoURL añadida, idioma (en) para los rdfs:comment añadido. Script: Carga de las URLs añadida, lang='es' añadido

--- a/script/scriptImportacionTFGrdflib.ipynb
+++ b/script/scriptImportacionTFGrdflib.ipynb
@@ -16,29 +16,22 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgTubZPzGUBu",
-        "outputId": "b00e7493-a79a-439f-ca53-953c7b52eb45"
+        "outputId": "c1c5d6a6-f3fd-4a58-d628-33ecb7f0a598"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting rdflib\n",
-            "  Downloading rdflib-7.1.1-py3-none-any.whl.metadata (11 kB)\n",
-            "Collecting isodate<1.0.0,>=0.7.2 (from rdflib)\n",
-            "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
-            "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n",
-            "Downloading rdflib-7.1.1-py3-none-any.whl (562 kB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m266.2/562.4 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
-            "Installing collected packages: isodate, rdflib\n",
-            "Successfully installed isodate-0.7.2 rdflib-7.1.1\n"
+            "Requirement already satisfied: rdflib in /usr/local/lib/python3.10/dist-packages (7.1.1)\n",
+            "Requirement already satisfied: isodate<1.0.0,>=0.7.2 in /usr/local/lib/python3.10/dist-packages (from rdflib) (0.7.2)\n",
+            "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n"
           ]
         }
       ],
@@ -90,7 +83,7 @@
         "    if district_name and district_name not in districts:\n",
         "      district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
         "      g.add((district_uri, RDF.type, NS.District))\n",
-        "      g.add((district_uri, NS.name, Literal(district_name, datatype=XSD.string)))\n",
+        "      g.add((district_uri, NS.name, Literal(district_name, lang=\"es\")))\n",
         "      g.add((city_uri, NS.hasDistrict, district_uri))\n",
         "      g.add((district_uri, NS.isDistrictOf, city_uri))\n",
         "      districts.add(district_name)\n",
@@ -125,8 +118,8 @@
         "    # Añade propiedades\n",
         "    g.add((monument_uri, NS.PK, Literal(row['PK'], datatype=XSD.string)))\n",
         "    g.add((monument_uri, NS.name, Literal(row['NOMBRE'], datatype=XSD.string)))\n",
-        "    g.add((monument_uri, NS.description, Literal(row['DESCRIPCION'], datatype=XSD.string)))\n",
-        "    g.add((monument_uri, NS.date, Literal(row['FECHA'], datatype=XSD.string)))\n",
+        "    g.add((monument_uri, NS.description, Literal(row['DESCRIPCION'], lang=\"es\")))\n",
+        "    g.add((monument_uri, NS.date, Literal(row['FECHA'], lang=\"es\")))\n",
         "    if row['CODIGO-POSTAL']:\n",
         "      g.add((monument_uri, NS.postalCode, Literal(row['CODIGO-POSTAL'], datatype=XSD.string)))\n",
         "\n",
@@ -138,6 +131,15 @@
         "    address = \" \".join(part for part in address_parts if part).strip()\n",
         "    if address != \"\":\n",
         "      g.add((monument_uri, NS.address, Literal(address, datatype=XSD.string)))\n",
+        "\n",
+        "    pdf_url = row['PDF'].strip() if row['PDF'] else None\n",
+        "    web_url = row['CONTENT-URL'].strip() if row['CONTENT-URL'] else None\n",
+        "\n",
+        "    if pdf_url:\n",
+        "      g.add((monument_uri, NS.infoURL, Literal(pdf_url, datatype=XSD.anyURI)))\n",
+        "\n",
+        "    if web_url:\n",
+        "      g.add((monument_uri, NS.infoURL, Literal(web_url, datatype=XSD.anyURI)))\n",
         "\n",
         "    # Relación con la ciudad\n",
         "    g.add((monument_uri, NS.isLocatedInCity, city_uri))\n",
@@ -188,20 +190,12 @@
         "g.add((admin_div_uri, NS.hasCity, city_uri))\n",
         "g.add((city_uri, NS.isCityOf, admin_div_uri))\n",
         "\n",
-        "# Carga distritos\n",
         "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
+        "  reader = list(csv.DictReader(csvfile, delimiter=';'))\n",
         "  load_districts(reader)\n",
-        "\n",
-        "#Carga vecindarios\n",
-        "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
         "  load_neighborhoods(reader)\n",
-        "\n",
-        "#Carga monumentos, su geometría y sus relaciones con distritos y vecindarios\n",
-        "with open(path_csv, 'r', encoding='latin-1') as csvfile:\n",
-        "  reader = csv.DictReader(csvfile, delimiter=';')\n",
         "  load_monuments(reader)\n",
+        "\n",
         "\n",
         "# Guardar el resultado\n",
         "print(f\"Tripletas después de la importación: {len(g)}\")\n",
@@ -212,27 +206,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXc4pWr8GufC",
-        "outputId": "0c656114-56e9-40c9-ddb0-11ea963c0475"
+        "outputId": "23e7706f-f205-4b47-9cc8-b2a7db3df64f"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tripletas iniciales: 187\n",
-            "Tripletas después de la importación: 31483\n"
+            "Tripletas iniciales: 192\n",
+            "Tripletas después de la importación: 35170\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Graph identifier=Nc05f5253f1614c06972d6b9ba242b613 (<class 'rdflib.graph.Graph'>)>"
+              "<Graph identifier=N89a17391d4724716a338a6ef53977bb4 (<class 'rdflib.graph.Graph'>)>"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 11
         }
       ]
     }
