PEC 3. Script: Se añade país y relación hasAdminDiv y su inversa. Ontología: fixes en algunas relaciones inversas

--- a/script/scriptImportacionTFGrdflib.ipynb
+++ b/script/scriptImportacionTFGrdflib.ipynb
@@ -16,22 +16,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgTubZPzGUBu",
-        "outputId": "c1c5d6a6-f3fd-4a58-d628-33ecb7f0a598"
+        "outputId": "212579c4-ef69-42c9-e086-5cad6c0d8648"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: rdflib in /usr/local/lib/python3.10/dist-packages (7.1.1)\n",
-            "Requirement already satisfied: isodate<1.0.0,>=0.7.2 in /usr/local/lib/python3.10/dist-packages (from rdflib) (0.7.2)\n",
-            "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n"
+            "Collecting rdflib\n",
+            "  Downloading rdflib-7.1.1-py3-none-any.whl.metadata (11 kB)\n",
+            "Collecting isodate<1.0.0,>=0.7.2 (from rdflib)\n",
+            "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
+            "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n",
+            "Downloading rdflib-7.1.1-py3-none-any.whl (562 kB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━\u001b[0m \u001b[32m522.2/562.4 kB\u001b[0m \u001b[31m15.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
+            "Installing collected packages: isodate, rdflib\n",
+            "Successfully installed isodate-0.7.2 rdflib-7.1.1\n"
           ]
         }
       ],
@@ -170,8 +177,8 @@
         "          g.add((author_uri, NS.name, Literal(author.strip(), datatype=XSD.string)))\n",
         "          authors_set.add(author_clean)\n",
         "\n",
-        "        g.add((author_uri, NS.isAuthorOf, monument_uri))\n",
         "        g.add((monument_uri, NS.hasAuthor, author_uri))\n",
+        "        g.add((author_uri, NS.isAuthorOf, monument_uri))\n",
         "\n",
         "    # Carga de geometría y su relación con el monumento\n",
         "    if row['LONGITUD'] and row['LATITUD']:\n",
@@ -180,11 +187,16 @@
         "      g.add((geometry_uri, GEO.asWKT, Literal(f\"POINT({row['LONGITUD']} {row['LATITUD']})\", datatype=GEO.wktLiteral)))\n",
         "      g.add((monument_uri, NS.hasGeometry, geometry_uri))\n",
         "\n",
-        "# Crea ciudad y división administrativa\n",
+        "# Crea país, ciudad, división administrativa y sus relaciones\n",
+        "country_uri = URIRef(NS[\"Country_Spain\"])\n",
+        "g.add((country_uri, RDF.type, NS.Country))\n",
+        "g.add((country_uri, NS.name, Literal(\"Spain\", datatype=XSD.string)))\n",
         "city_uri = URIRef(NS[\"City_Madrid\"])\n",
         "admin_div_uri = URIRef(NS[\"AdministrativeDivision_Madrid\"])\n",
         "g.add((city_uri, RDF.type, NS.City))\n",
         "g.add((city_uri, NS.name, Literal(\"Madrid\", datatype=XSD.string)))\n",
+        "g.add((country_uri, NS.hasAdministrativeDivision, admin_div_uri))\n",
+        "g.add((admin_div_uri, NS.isAdministrativeDivisionOf, country_uri))\n",
         "g.add((admin_div_uri, RDF.type, NS.AdministrativeDivision))\n",
         "g.add((admin_div_uri, NS.name, Literal(\"Madrid\", datatype=XSD.string)))\n",
         "g.add((admin_div_uri, NS.hasCity, city_uri))\n",
@@ -206,27 +218,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXc4pWr8GufC",
-        "outputId": "23e7706f-f205-4b47-9cc8-b2a7db3df64f"
+        "outputId": "02b60703-70c8-46c5-deca-150f2b9e47e7"
       },
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tripletas iniciales: 192\n",
-            "Tripletas después de la importación: 35170\n"
+            "Tripletas iniciales: 194\n",
+            "Tripletas después de la importación: 35176\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Graph identifier=N89a17391d4724716a338a6ef53977bb4 (<class 'rdflib.graph.Graph'>)>"
+              "<Graph identifier=N6c0dc14fce074646a6feea959d8bdada (<class 'rdflib.graph.Graph'>)>"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 6
         }
       ]
     }
