PEC 3 Script: Mejor que el nombre del distrito no sea idiomático

--- a/script/scriptImportacionTFGrdflib.ipynb
+++ b/script/scriptImportacionTFGrdflib.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KgTubZPzGUBu",
-        "outputId": "212579c4-ef69-42c9-e086-5cad6c0d8648"
+        "outputId": "14fb8263-6898-4b6b-ac5a-8245b63ecb9a"
       },
       "outputs": [
         {
@@ -35,7 +35,7 @@
             "  Downloading isodate-0.7.2-py3-none-any.whl.metadata (11 kB)\n",
             "Requirement already satisfied: pyparsing<4,>=2.1.0 in /usr/local/lib/python3.10/dist-packages (from rdflib) (3.2.0)\n",
             "Downloading rdflib-7.1.1-py3-none-any.whl (562 kB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/562.4 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━\u001b[0m \u001b[32m522.2/562.4 kB\u001b[0m \u001b[31m15.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m562.4/562.4 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading isodate-0.7.2-py3-none-any.whl (22 kB)\n",
             "Installing collected packages: isodate, rdflib\n",
             "Successfully installed isodate-0.7.2 rdflib-7.1.1\n"
@@ -90,7 +90,7 @@
         "    if district_name and district_name not in districts:\n",
         "      district_uri = URIRef(NS[f\"District_{district_name.replace(' ', '_')}\"])\n",
         "      g.add((district_uri, RDF.type, NS.District))\n",
-        "      g.add((district_uri, NS.name, Literal(district_name, lang=\"es\")))\n",
+        "      g.add((district_uri, NS.name, Literal(district_name, datatype=XSD.string)))\n",
         "      g.add((city_uri, NS.hasDistrict, district_uri))\n",
         "      g.add((district_uri, NS.isDistrictOf, city_uri))\n",
         "      districts.add(district_name)\n",
@@ -218,9 +218,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tXc4pWr8GufC",
-        "outputId": "02b60703-70c8-46c5-deca-150f2b9e47e7"
+        "outputId": "d36d1905-efe1-4fa3-ea74-3fd0ee61aa9d"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,11 +234,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<Graph identifier=N6c0dc14fce074646a6feea959d8bdada (<class 'rdflib.graph.Graph'>)>"
+              "<Graph identifier=N7688ca27bf90411aa1d49506de0ad964 (<class 'rdflib.graph.Graph'>)>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     }
